Change log (recent comes first)

06 Feb 2011: Released v 0.2.1: bugfixes and reworked memory management.
  This release fixes some bugs. It does not bring new features. However, the
  memory management system has been largely rewritten. The memory management
  system is now aware of the "complex" types and knows how to create, destroy,
  copy and relocate them.  The release prepares the ground for future features
  (boxing/unboxing through the Obj type, which will allow several fundamental
  improvements to both Box and Boxer).

10 Oct 2010: Released v 0.2.0: major compiler restructuring and improvements.
  Rewrote most of the compiler core code from scratch. In particular,
  * Rewrote the parser (fixing some small grammar issues);
  * Introduced proper abstract syntax tree layer, from which the VM code
    is then generated;
  * Created an intermediate layer for VM code generation. The layer is now
    aware of the instructions and what registers they modify. This could allow
    to introduce a VM code optimizer later on (even if translation to C code
    may have the priority on this);
  * Introduced a new object for procedure handling (CmpProc) which reduces
    drastically the complexity of generating VM code, making the compiler code
    much simpler;
  * Introduced a namespace module, which should allow future introduction of
    namespaces;
  * Autogeneration of procedures now correctly works, allowing to embed
    any objects inside new ones (creators and destructors are automatically
    included in the user-defined creators/destructors);
  * Introduced exceptions. The VM builds a traceback similar to what happens
    for Python. The user can raise an exception using Fail["message"] (only
    one exception flavour is supported at the moment);
  * Removed the `line' VM instruction. Error positions are now computed using
    position in code and lookup tables. Also column-inside-line is available
    in error messages;