@@ -18,8 +18,6 @@
 #    59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             #
 ############################################################################
 
-# $Id$
-
 ACLOCAL_AMFLAGS=-I libltdl/m4
 
 boxlibdir=@boxlibdir@
